[package]
name = "pipegate"
version = "0.4.0"
edition = "2021"
description = "A payment authentication middleware with stablecoins"
license = "MIT"
homepage="https://github.com/Dhruv-2003/ethbangkok-24"
repository="https://github.com/Dhruv-2003/ethbangkok-24"
readme ="README.md"
keywords = ["blockchain", "payment", "ethereum"]
categories = ["cryptography", "network-programming", "web-programming"]
exclude=["src/main.rs","scripts"]

[dependencies]
dashmap = "6.1.0"
ethers = { version="2.0.14", features = ["abigen", "ws"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
thiserror = "2.0.3"


[features]
default =[]

[lib]
crate-type = ["cdylib", "rlib"]

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.8"
